--- a/ExperimentRunner.vcxproj
+++ b/ExperimentRunner.vcxproj
@@ -84,7 +84,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>D:\Sync\JsonLib;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Sync\CPP_Libraries;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -169,7 +169,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>C:\Program Files\Python310\include;D:\Sync\CGym;D:\Sync\CGP_CPP_TestApp\CGP_CPP;D:\Sync\CPP_Libraries\yaml-cpp-yaml-cpp-0.7.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files\Python310\include;C:\Sync\CGym;C:\Sync\CGP_CPP_TestApp\CGP_CPP;C:\Sync\CPP_Libraries\yaml-cpp-yaml-cpp-0.7.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -183,8 +183,14 @@
       <AdditionalDependencies>yaml-cpp.lib</AdditionalDependencies>
     </Lib>
     <Lib>
-      <AdditionalLibraryDirectories>D:\Sync\CPP_Libraries\yaml-cpp-yaml-cpp-0.7.0\build\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Sync\CPP_Libraries\yaml-cpp-yaml-cpp-0.7.0\build\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Lib>
+    <PreBuildEvent>
+      <Command>copy $(SolutionDir)SageRunner.py C:\Users\Josep\AppData\Roaming\Python\Python310\site-packages\</Command>
+    </PreBuildEvent>
+    <PreBuildEvent>
+      <Message>Copy SageRunner to where the Python interpretter expects it.</Message>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Experiment.h" />
