--- a/ExperimentRunner.vcxproj
+++ b/ExperimentRunner.vcxproj
@@ -171,6 +171,9 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>C:\Program Files\Python310\include;C:\Sync\CGym;C:\Sync\CGP_CPP_TestApp\CGP_CPP;C:\Sync\CPP_Libraries\yaml-cpp-yaml-cpp-0.7.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <DebugInformationFormat>OldStyle</DebugInformationFormat>
+      <Optimization>Disabled</Optimization>
+      <UndefinePreprocessorDefinitions>NDEBUG</UndefinePreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -203,6 +206,7 @@
     <ClInclude Include="JBrain.h" />
     <ClInclude Include="JBrainFactory.h" />
     <ClInclude Include="MultiExperiment.h" />
+    <ClInclude Include="ObservationProcessor.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
@@ -210,7 +214,9 @@
     <ClCompile Include="GymSageRunner.cpp" />
     <ClCompile Include="JBrain.cpp" />
     <ClCompile Include="JBrainFactory.cpp" />
+    <ClCompile Include="JBrain_Snap.cpp" />
     <ClCompile Include="MultiExperiment.cpp" />
+    <ClCompile Include="ObservationProcessor.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
